apply plugin: 'java'
sourceCompatibility = 1.8
repositories {
    mavenCentral()
}

dependencies {
    implementation project(":common")
    implementation fileTree(dir:'.', include:'*.jar')
}
jar{
    manifest{
        attributes 'Main-Class': "icesi.plantapiloto.experimento.client_manager",
                    'Class-Path': configurations.runtimeClasspath.resolve().collect { it.toURI() }.join(' ')
    }
}